--- a/artikel.html
+++ b/artikel.html
@@ -163,6 +163,7 @@
 		  text-align: right;
 		  font-size: 0.7em;
 		  color: black;
+		  margin-right: 5%;
 	    }
             .ingress{
                   font-family: Atkinson-Bold;
