--- a/artikel.html
+++ b/artikel.html
@@ -289,7 +289,7 @@
             var skribent = content_of_tag(a_str,"skribent",0);
             var datum = content_of_tag(a_str,"datum",0);
 	    var datum_post = datum;
-	    var data = skribent +`<br>` + datum_post;
+	    var data = skribent +` ` + datum_post;
 		  
 	    var buffer = ``   
             
