--- a/artikel.html
+++ b/artikel.html
@@ -311,7 +311,7 @@
                 
             }
             document.getElementById('om_artikeln').innerHTML = buffer;
-             document.getElementById('_data').innerHTML = fotograf;
+             document.getElementById('_data').innerHTML = data;
           })
 
           fetch('artiklar/' + tag + '/brödtext.html')
