--- a/index.html
+++ b/index.html
@@ -280,15 +280,18 @@
 	<!-- End Google Tag Manager (noscript) -->
 	
 	<script src = "script_closed.js"></script>
+
+	<script src="https://www.w3schools.com/lib/w3.js"></script>
+	<div w3-include-html="header.html"></div>
 	
-	<div id = 'web-header'><script> 
+	<!--<div id = 'web-header'><script> 
 		fetch('header.html')
 			.then(function(resp){return resp.text()})
 			.then(function(resp){
 				document.getElementById('web-header').innerHTML = resp;
 			});
 		
-	</script></div>
+	</script></div>-->
 
 	<div class = banner>
 		<div class = gaffel_logga>
