--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
 
 	<script src="https://www.w3schools.com/lib/w3.js"></script>
 	<div w3-include-html="header.html"></div>
+	<script>w3.includeHTML();</script>
 	
 	<!--<div id = 'web-header'><script> 
 		fetch('header.html')
