--- a/drakens-värld.html
+++ b/drakens-värld.html
@@ -19,14 +19,11 @@
         </style>
     </head>
     <body>
-     <div id = 'web-header'><script> 
-		fetch('header.html')
-			.then(function(resp){return resp.text()})
-			.then(function(resp){
-				document.getElementById('web-header').innerHTML = resp;
-			});
-		
-    </script></div>
+
+	<script src="https://www.w3schools.com/lib/w3.js"></script>
+	<div w3-include-html="header.html"></div>
+	<script>w3.includeHTML();</script>
+	    
 	<script src = "script_closed.js"></script>
         <div class = game>
 
