--- a/header.html
+++ b/header.html
@@ -98,8 +98,8 @@
 	
 	<div class = left_div>
 		<a class = "navlink" href="/">HEM</a>
-		<!--<a class = "navlink" href="/drakens-värld">DRAKENS VÄRLD</a>
-		<a class = "navlink" href="/hemliga-klubben-inlogg">HEMLIGT</a>-->
+		<a class = "navlink" href="/drakens-värld">DRAKENS VÄRLD</a>
+		<a class = "navlink" href="/hemliga-klubben-inlogg">HEMLIGT</a>
 	</div>
 
 	<div class = right_div>
