--- a/index.html
+++ b/index.html
@@ -364,9 +364,9 @@
 		
 		<div id ='blogg_inlägg' class = blog_area>
 			<h2 style = "width: 100%;">SENASTE</h2>
+			<div id = 'main52'><script>draw_article_button('main52','hemsläp-2',isMobile)</script></div>
 			<div id = 'main51'><script>draw_article_button('main51','kent',isMobile)</script></div>
-			<div id = 'main50'><script>draw_article_button('main50','regi-i-en-systemetkasse',isMobile)</script></div>
-			<div id = 'main49'><script>draw_article_button('main49','int-diset',isMobile)</script></div>				
+			<div id = 'main50'><script>draw_article_button('main50','regi-i-en-systemetkasse',isMobile)</script></div>			
 								
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
 			<div id = 'iul'><script>draw_article_button('iul','inne-ute-apr-25',isMobile)</script></div>
@@ -395,6 +395,7 @@
 			new_html += "</a>"
 			document.getElementById("tarot").innerHTML = new_html;
 			</script>
+			<div id = 'main49'><script>draw_article_button('main49','int-diset',isMobile)</script></div>	
 			<div id = 'main48'><script>draw_article_button('main48','fåglar',isMobile)</script></div>
 			<div id = 'main47'><script>draw_article_button('main47','recension-douglas-diamond',isMobile)</script></div>
 			<div id = 'main46'><script>draw_article_button('main46','4-band-som-kan-ske',isMobile)</script></div>
