--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 	<div class = tidning>
 		
 		<div id = 'top' style = "width: 100%; margin-top: 20px; margin-bottom: 20px;">
-			<div id = 'blickfång'><script>draw_article_button('blickfång','inne-ute-apr-25',isMobile)</script></div>	
+			<div id = 'blickfång'><script>draw_article_button('blickfång','kent',isMobile)</script></div>	
 			<div style = "background: black; width: 100%;">
 
 			</div>
@@ -369,11 +369,11 @@
 			<div id = 'main50'><script>draw_article_button('main50','regi-i-en-systemetkasse',isMobile)</script></div>			
 								
 			<h2 style = "width: 100%;">GAFFELS INNE-UTE-LISTA</h2>
-			<div id = 'iul'><script>draw_article_button('iul','inne-ute-apr-25',isMobile)</script></div>
+			<div id = 'iul'><script>draw_article_button('iul','inne-ute-maj-25',isMobile)</script></div>
 			<div style = "display: grid;">
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-apr-25'>JANUARI</a>	
 				<a class = 'artikel_knapp' href='/artikel?=inne-ute-mar-25'>MARS</a>
-				<a class = 'artikel_knapp' href='/artikel?=inne-ute-feb-25'>FEBRUARI</a>	
-				<a class = 'artikel_knapp' href='/artikel?=inne-ute-jan-25'>JANUARI</a>											
+				<a class = 'artikel_knapp' href='/artikel?=inne-ute-feb-25'>FEBRUARI</a>															
 			</div>
 			
 			<h2 style = "width: 100%;">ÄLDRE</h2>
