--- a/korsord.html
+++ b/korsord.html
@@ -28,7 +28,26 @@
 	<canvas id = 'crossword'></canvas>
 
          <script>
-           	
+           	const canvas = document.getElementById("crossword");
+    		const ctx = canvas.getContext("2d");
+
+		const cols = 10;
+		const rows = 10;
+
+		const cell_size = canvas.width / cols
+
+	        ctx.font = "30px Arial";
+	        ctx.textAlign = "center";
+	        ctx.textBaseline = "middle";
+	
+	        for (let y = 0; y < rows; y++) {
+	             for (let x = 0; x < cols; x++) {
+		         const letter = letters[Math.floor(Math.random() * letters.length)];
+			ctx.fillText(letter, x * cell_size + cell_size / 2, y * cell_size + cell_size / 2);
+	              }
+	        }
+		
+		
          </script>     
     </body>
 </html>
