--- a/korsord.html
+++ b/korsord.html
@@ -39,6 +39,7 @@
 	        ctx.font = "30px Arial";
 	        ctx.textAlign = "center";
 	        ctx.textBaseline = "middle";
+		ctx.color = "black";
 	
 	        for (let y = 0; y < rows; y++) {
 	             for (let x = 0; x < cols; x++) {
