--- a/korsord.html
+++ b/korsord.html
@@ -36,6 +36,8 @@
 
 		const cell_size = canvas.width / cols
 
+		const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+		 
 	        ctx.font = "30px Arial";
 	        ctx.textAlign = "center";
 	        ctx.textBaseline = "middle";
