--- a/korsord.html
+++ b/korsord.html
@@ -46,7 +46,7 @@
 	        for (let y = 0; y < rows; y++) {
 	             for (let x = 0; x < cols; x++) {
 		         const letter = letters[Math.floor(Math.random() * letters.length)];
-			ctx.fillText(letter, (x * cell_size) + (cell_size / 2), (y * cell_size) + (cell_size / 2));
+			ctx.fillText(letter, (x * cell_size) + (cell_size / 2), (y * cell_size/2) + (cell_size / 2));
 	              }
 	        }
 		
