--- a/korsord.html
+++ b/korsord.html
@@ -34,7 +34,7 @@
 		const cols = 10;
 		const rows = 10;
 
-		const cell_size = canvas.width / cols;
+		const cell_size = 10;
 
 		const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
 		 
