--- a/korsord.html
+++ b/korsord.html
@@ -25,7 +25,7 @@
 	    
 	<script src = "script_closed.js"></script>
        
-	<canvas id = 'crossword'></canvas>
+	<canvas id = 'crossword' width: "clamp(75px, 90vw, 750px)" height: "clamp(75px, 90vw, 750px)"></canvas>
 
          <script>
            	const canvas = document.getElementById("crossword");
