--- a/korsord.html
+++ b/korsord.html
@@ -38,11 +38,11 @@
 		const cols = 10;
 		const rows = 10;
 
-		const cell_size = 10;
+		const cell_size = canvas.width/cols;
 
 		const letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
 		 
-	        ctx.font = "10px Arial";
+	        ctx.font = "50px Arial";
 	        ctx.textAlign = "center";
 	        ctx.textBaseline = "middle";
 		ctx.color = "black";
