--- a/korsord.html
+++ b/korsord.html
@@ -24,9 +24,11 @@
 	<script>w3.includeHTML();</script>
 	    
 	<script src = "script_closed.js"></script>
-       
-	<canvas id = 'crossword' width: "clamp(75px, 90vw, 750px)" height: "clamp(75px, 90vw, 750px)"></canvas>
 
+	<div style = "margin: auto;">
+		<canvas id = 'crossword' width: "clamp(75px, 90vw, 750px)" height: "clamp(75px, 90vw, 750px)"></canvas>
+	</div>
+		
          <script>
            	const canvas = document.getElementById("crossword");
     		const ctx = canvas.getContext("2d");
