--- a/korsord.html
+++ b/korsord.html
@@ -64,7 +64,7 @@
                 for (let col = 0; col < gridSize; col++) {
                     const inputCell = document.createElement("input");
                     inputCell.classList.add("cell");
-		    inputCell.style.cssText = "width: 50px height: 50px;";
+		    inputCell.style.cssText = "width: 50px; height: 50px;";
                     inputCell.maxLength = 1; // Restrict to a single character
                     inputCell.addEventListener("input", function(event) {
                         let value = event.target.value;
