--- a/korsord.html
+++ b/korsord.html
@@ -52,7 +52,7 @@
     <script>
         function generateGrid() {
 
-	    const game_size = Math.min(600,innerWidth);
+	    const game_size = Math.min(600,0.9*innerWidth);
 		
 	    const gridSize = 10;
 	    const cell_size = game_size / gridSize;
@@ -67,7 +67,7 @@
                 for (let col = 0; col < gridSize; col++) {
                     const inputCell = document.createElement("input");
                     inputCell.classList.add("cell");
-		    inputCell.style.cssText = "width: ${cell_size}px; height: ${cell_size}px;";
+		    inputCell.style.cssText = `width: ${cell_size}px; height: ${cell_size}px;`;
                     inputCell.maxLength = 1; // Restrict to a single character
                     inputCell.addEventListener("input", function(event) {
                         let value = event.target.value;
