--- a/korsord.html
+++ b/korsord.html
@@ -49,7 +49,7 @@
     </div>
 
     <script>
-	
+	var rot = 0
 	    
         function generateGrid() {
 
@@ -69,7 +69,7 @@
                     const inputCell = document.createElement("input");
                     inputCell.classList.add("cell");
 		    inputCell.style.cssText = `width: ${cell_size}px; height: ${cell_size}px;`;
-		    inputCell.id = `${row}-${col}`;
+		    inputCell.id = `${col}-${row}`;
                     inputCell.maxLength = 1; // Restrict to a single character
                     inputCell.addEventListener("input", function(event) {
                         let value = event.target.value;
@@ -83,7 +83,17 @@
 
 			console.log(xx);
 			console.log(yy);
-			document.getElementById().focus();
+			if(rot == 0){
+				xx++
+			}
+			else{
+				yy++
+			}
+			if(xx>=gridSize){xx-=gridSize}
+			if(yy>=gridSize){yy-=gridSize}
+			var new_id = string(xx) + "-" + string(yy);
+			
+			document.getElementById(new_id).focus();
                     });
 		    inputCell.addEventListener("focus", function(event){
 			    
