--- a/korsord.html
+++ b/korsord.html
@@ -91,7 +91,7 @@
 			}
 			if(xx>=gridSize){xx-=gridSize}
 			if(yy>=gridSize){yy-=gridSize}
-			var new_id = string(xx) + "-" + string(yy);
+			var new_id = String(xx) + "-" + String(yy);
 			
 			document.getElementById(new_id).focus();
                     });
