--- a/gshpq.html
+++ b/gshpq.html
@@ -13,7 +13,7 @@
 		
 	    body { 
 
-         background-color: black;
+         background-color: white;
 
 	     	margin: 0px;
 		            padding: 0px;
@@ -57,14 +57,12 @@
 	    
       <p id = "question">Fråga 1: dadadadmkamdma</p>
 
-      <input type = "radio" id = "a1">
+      <input type = "radio" id = "a1" name = "quiz" value = "0">
       <label for="a1">Svar 1</label><br>
-      <input type = "radio" id = "a2">
+	
+      <input type = "radio" id = "a2" name = "quiz" value = "1">
       <label for="a2">Svar 2</label><br>
-      <input type = "radio" id = "a3">
-      <label for="a3">Svar 3</label><br>
-      <input type = "radio" id = "a4">
-      <label for="a4">Svar 4</label><br>
+
       
     </body>
 </html>
