--- a/korsord.html
+++ b/korsord.html
@@ -99,7 +99,7 @@
 			
                     });
 		    inputCell.addEventListener("focus", function(event){
-			    
+			this.select();    
 		    });
                     crosswordContainer.appendChild(inputCell);
                 }
