--- a/korsord.html
+++ b/korsord.html
@@ -23,6 +23,12 @@
             text-align: center;
             font-size: 20px;
             text-transform: uppercase;
+	    -webkit-touch-callout: none;
+	    -webkit-user-select: none;
+	    -khtml-user-select: none;
+	    -moz-user-select: none;
+	    -ms-user-select: none;
+	    user-select: none;
         }
         .cell:focus {
             outline: none;
