--- a/korsord.html
+++ b/korsord.html
@@ -80,12 +80,13 @@
 		    });
 		    inputCell.addEventListener("keydown", function(event){
    			console.log(event.key);
-
-                        if (!/^[A-Za-z]$/.test(value)) {
+			var k = event.key;
+			    
+                        if (!/^[A-Za-z]$/.test(k)) {
                             event.target.value = ""; // Clear non-letter input
                         }
 			else{
-				event.target.value = event.key;
+				event.target.value = k;
 				var id_str = this.id;
 				id_str = id_str.split("-");
 				var xx = Number(id_str[0])
