--- a/korsord.html
+++ b/korsord.html
@@ -23,6 +23,7 @@
             text-align: center;
             font-size: 20px;
             text-transform: uppercase;
+	    caret-color: transparent;
         }
         .cell:focus {
             outline: none;
