--- a/korsord.html
+++ b/korsord.html
@@ -76,11 +76,12 @@
                     inputCell.maxLength = 0; // Restrict to a single character
                     inputCell.addEventListener("input", function(event) {
 
-		    var symbol = symbol_grid[col][row]
+		    var symbol = symbol_grid[col][row];
 		    if(symbol == 1){
 		    	input.disabled = true;
 			input.style.backgroundColor = black;
 		    }
+		    console.log("symbol:");
 		    console.log(symbol);
 			    
                     });
