--- a/korsord.html
+++ b/korsord.html
@@ -77,7 +77,7 @@
                      var symbol = symbol_grid[col][row];
 		    if(symbol == 1){
 		    	inputCell.disabled = true;
-			inputCell.style.backgroundColor = black;
+			inputCell.style.backgroundColor = "black";
 		    }
 		    console.log(symbol);
 			
