--- a/korsord.html
+++ b/korsord.html
@@ -76,7 +76,7 @@
                     inputCell.maxLength = 0; // Restrict to a single character
                      var symbol = symbol_grid[col][row];
 		    if(symbol == 1){
-			inputCell.value = 0;
+			inputCell.value = "?";
 			inputCell.style.backgroundColor = "black";
 		    }
 		    console.log(symbol);
@@ -87,7 +87,7 @@
 			    
                     });
 		    inputCell.addEventListener("focus", function(event){
-   			if(this.value == 0){
+   			if(this.value == "?"){
 				var id_str = this.id;
 				id_str = id_str.split("-");
 				var xx = Number(id_str[0])
