--- a/korsord.html
+++ b/korsord.html
@@ -99,8 +99,8 @@
 				else{
 					yy++
 				}
-				if(xx>=gridSize){xx-=gridSize}
-				if(yy>=gridSize){yy-=gridSize}
+				if(xx>=gridSize){xx-=gridSize; yy++;}
+				if(yy>=gridSize){yy-=gridSize; xx++;}
 				var new_id = String(xx) + "-" + String(yy);
 				
 				document.getElementById(new_id).focus();
