--- a/korsord.html
+++ b/korsord.html
@@ -114,7 +114,7 @@
 			}
 			else{
 	                        if (!/^[A-Za-z]$/.test(k)) {
-	                            event.target.value = ""; // Clear non-letter input
+	                            //event.target.value = ""; // Clear non-letter input
 	                        }
 				else{
 					event.target.value = k;
