--- a/korsord.html
+++ b/korsord.html
@@ -18,8 +18,8 @@
             align-items: center;
         }
         .cell {
-            width: 30px;
-            height: 30px;
+            width: 20px;
+            height: 20px;
             text-align: center;
             font-size: 20px;
             text-transform: uppercase;
@@ -64,8 +64,8 @@
 	    const crosswordContainer = document.getElementById("crossword-container");
             crosswordContainer.innerHTML = '';  // Clear any existing grid
 
-            crosswordContainer.style.gridTemplateColumns = `repeat(${gridSize+1}, ${cell_size+1}px)`;
-            crosswordContainer.style.gridTemplateRows = `repeat(${gridSize+1}, ${cell_size+1}px)`;
+            crosswordContainer.style.gridTemplateColumns = `repeat(${gridSize}, ${cell_size}px)`;
+            crosswordContainer.style.gridTemplateRows = `repeat(${gridSize}, ${cell_size}px)`;
 
             for (let row = 0; row < gridSize; row++) {
                 for (let col = 0; col < gridSize; col++) {
