--- a/korsord.html
+++ b/korsord.html
@@ -24,10 +24,11 @@
             font-size: 20px;
             text-transform: uppercase;
 	    caret-color: transparent;
+	    outline: none;
+	    background-color: white;	
         }
         .cell:focus {
-            outline: none;
-            border-color: blue;
+            background-color: red;
         }
         .grid-container {
             display: flex;
