--- a/korsord.html
+++ b/korsord.html
@@ -25,10 +25,13 @@
             text-transform: uppercase;
 	    caret-color: transparent;
 	    outline: none;
+	      -webkit-box-shadow: none;
+	  -moz-box-shadow: none;
+	  box-shadow: none;
 	    background-color: white;	
         }
         .cell:focus {
-            background-color: red;
+            background-color: grey;
         }
         .grid-container {
             display: flex;
