--- a/korsord.html
+++ b/korsord.html
@@ -25,9 +25,7 @@
             text-transform: uppercase;
 	    caret-color: transparent;
 	    outline: none;
-	      -webkit-box-shadow: none;
-	  -moz-box-shadow: none;
-	  box-shadow: none;
+	    border: none;
 	    background-color: white;	
         }
         .cell:focus {
