--- a/korsord.html
+++ b/korsord.html
@@ -26,7 +26,7 @@
 	    caret-color: transparent;
 	    outline: none;
 	    border: none;
-	    padding: none;
+	    padding: 0px;
 	    background-color: white;	
         }
         .cell:focus {
