--- a/korsord.html
+++ b/korsord.html
@@ -30,7 +30,7 @@
 	    background-color: white;	
         }
         .cell:focus {
-            background-color: grey;
+            background-color: Gainsboro;
         }
         .grid-container {
             display: flex;
