--- a/korsord.html
+++ b/korsord.html
@@ -5,6 +5,23 @@
         <meta name="description" content="Lös korsord">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
         <style>
+		@font-face {
+		  font-family: newsagent;
+		  src: url(font/Newsagent-Regular.ttf) format("truetype");
+		}
+		@font-face {
+		  font-family: morfeta;
+		  src: url(font/MorfetaGealmord-5158V.otf) format("opentype");
+		}
+		@font-face {
+		  font-family: helvetica_bold;
+		  src: url(font/Helvetica-Bold.ttf) format("truetype");
+		}
+		 @font-face {
+		  font-family: Atkinson-Bold;
+		  src: url(font/AtkinsonHyperlegible-Bold.ttf) format("truetype");
+		}
+	
           body{
             background: black;
             margin: 0px;
@@ -27,7 +44,8 @@
 	    outline: none;
 	    border: none;
 	    padding: 0px;
-	    background-color: white;	
+	    background-color: white;
+	    font-family: Atkinson-Bold;
         }
         .cell:focus {
             background-color: Gainsboro;
@@ -75,6 +93,7 @@
                     const inputCell = document.createElement("input");
                     inputCell.classList.add("cell");
 		    inputCell.style.cssText = `width: ${cell_size}px; height: ${cell_size}px;`;
+		    inputCell.style.font-family = "${cell_size-10}px"
 		    inputCell.id = `${col}-${row}`;
                     inputCell.maxLength = 0; // Restrict to a single character
                      var symbol = symbol_grid[col][row];
