--- a/korsord.html
+++ b/korsord.html
@@ -93,7 +93,7 @@
                     const inputCell = document.createElement("input");
                     inputCell.classList.add("cell");
 		    inputCell.style.cssText = `width: ${cell_size}px; height: ${cell_size}px;`;
-		    inputCell.style.font-family = "${cell_size-10}px"
+		    inputCell.style.fontFamily = "${cell_size-10}px";
 		    inputCell.id = `${col}-${row}`;
                     inputCell.maxLength = 0; // Restrict to a single character
                      var symbol = symbol_grid[col][row];
