--- a/korsord.html
+++ b/korsord.html
@@ -131,9 +131,8 @@
 		    inputCell.addEventListener("keydown", function(event){
    			//console.log(event.code);
 			this.style.backgroundColor = "red";
-			var k = event.code;
-			k = k.charAt(k.length - 1)
-			if(k == "space"){
+			var k = event.key;
+			if(k == " "){
 				rot = !rot;
 			}
 			else{
