--- a/korsord.html
+++ b/korsord.html
@@ -95,7 +95,7 @@
 		    inputCell.style.cssText = `width: ${cell_size}px; height: ${cell_size}px;`;
 		    inputCell.style.fontSize = `${cell_size-10}px`;
 		    inputCell.id = `${col}-${row}`;
-                    inputCell.maxLength = 0; // Restrict to a single character
+                    inputCell.maxLength = 2;
                      var symbol = symbol_grid[col][row];
 		    if(symbol == 1){
 			inputCell.value = "?";
@@ -115,7 +115,7 @@
 	                        }
 				else{
 					this.style.backgroundColor = "red";
-					event.target.value = k;
+					event.target.value = "A";
 					var id_str = this.id;
 					id_str = id_str.split("-");
 					var xx = Number(id_str[0])
