--- a/korsord.html
+++ b/korsord.html
@@ -115,7 +115,7 @@
 	                        }
 				else{
 					this.style.backgroundColor = "red";
-					event.target.value = "A";
+					this.value = "A";
 					var id_str = this.id;
 					id_str = id_str.split("-");
 					var xx = Number(id_str[0])
