--- a/korsord.html
+++ b/korsord.html
@@ -105,7 +105,7 @@
 			
 		    inputCell.addEventListener("input", function(event) {
 			let inp_value = event.target.value;
-    			let lastChar = value.slice(-1);
+    			let lastChar = inp_value.slice(-1);
 			console.log(lastChar);
 			 
 			var k = lastChar;
