--- a/korsord.html
+++ b/korsord.html
@@ -83,8 +83,7 @@
 		});
 		
 		let focusedElement = document.activeElement;
-		var foc_id = focusedElement.id;
-		var id_str = foc_id.id;
+		var id_str = focusedElement.id;
 		id_str = id_str.split("-");
 		var xx = Number(id_str[0])
 		var yy = Number(id_str[1])
