--- a/korsord.html
+++ b/korsord.html
@@ -87,7 +87,7 @@
 		const elements = document.querySelectorAll('.cell');
 
 		elements.forEach(element => {
-		    if(this.value == "?"){
+		    if(element.value == "?"){
 		    	element.style.backgroundColor = "black";
 		    }
 		    else{
